--- a/src/app/testimonial/testimonial.component.css
+++ b/src/app/testimonial/testimonial.component.css
@@ -13,6 +13,10 @@
   margin-top: 20px;
 }
 
+md-card {
+  flex-shrink: 0;
+}
+
 /** Copied from message.css **/
 md-list md-list-item [md-line] {
   display: flex;
